Implementacion de 2fa y cambio de campo para verificacion de metodo de autenticacion
