# routes/api.mjs
@@ -17,9 +17,9 @@ const router = Router();
 router.post('/v1/login', [validate(loginSchema)], Call(ApiController.login));
 router.post('/v1/logout', [auth, bitacora], Call(ApiController.logout));
 router.post('/v1/2fa', [validate(twoFactorAuthSchema)], Call(ApiController.twoFactorAuthLoginChoose));
-router.post('/v1/2fa/verificar', Call(ApiController.verifyTwoFactorAuthCode));
-router.post('/v1/2fa/codigo', Call(ApiController.sendCode));
-router.get('/v1/verificacion/usuario/:token', Call(ApiController.confirmUser));
+router.post('/v1/2fa/verify/:id_user', Call(ApiController.verifyTwoFactorAuthCode));
+router.post('/v1/2fa/code', Call(ApiController.sendCode));
+router.get('/v1/verification/user/:token', Call(ApiController.confirmUser));
 router.post('/v1/refresh', Call(ApiController.RefreshToken));
 router.use('/v1/users', [auth, bitacora], routesUsers);
 router.use('/v1/perfiles', [auth, bitacora], routesPerfil);
